# neda

./: .gitignore  Cargo.toml  LICENSE-APACHE.md  LICENSE-MIT.md  README.md  README.md.md  justfile  neda_local.db
cli/: Cargo.toml  README.md
cli/archive/: list.rs  main.rs
cli/docs/: TODO.md
cli/scripts/: install_neda_service_linux_systemd_user.sh  install_neda_service_osx_user.sh
cli/src/: api.rs  db.rs  lib.rs  list.rs  main.rs
docs/: main_ideas.md
lib/: Cargo.toml  README.md
lib/assets/templetes/: config.toml
lib/docs/: TODO.md
lib/examples/: main.rs
lib/src/: lib.rs  main.rs  test.rs
lib/src/client/: config.rs  config_reader.rs
lib/src/core/: mod.rs
lib/src/providers/aladhan/: aladhan_api_config.rs  mod.rs
lib/src/sound/: mod.rs
lib/src/storage/: mod.rs  prayers_times_db.rs
scripts/: run_tests_and_examples.nu
src/: lib.rs  main.rs
src/client/: config.rs
src/core/: config.rs  prayers_times.rs  providers.rs
src/providers/: mod.rs
src/providers/aladhan/: aladhan_api_config.rs  mod.rs  test.rs
src/storage/: mod.rs  prayers_times_db.rs
