[workspace]
members = ["lib", "cli"]
resolver = "2"

[workspace.dependencies]
chrono = "0.4.23"
reqwest = { version = "0.12", features = ["blocking"] }
serde_json = "1.0"
rusqlite = { version = "0.35", features = ["bundled"] }
gtoml = "0.1"
rodio = { version = "0.20.1", default-features = false, features = ["symphonia-all"] }
clap = "4.5.37"
