[package]
name = "neda-cli"
version = "0.1.0"
edition = "2024"
authors = ["abdelkadous <development.abdelkadous@gmail.com>"]
description = "a siple adhan cli app written in rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/abdelkadouss/neda"
keywords = ["islam", "prayer", "adhan", "salat"]
categories = ["command-line-utilities", "multimedia::audio"]

[dependencies]
neda-lib = { path = "../lib" }
clap = { workspace = true }
chrono = { workspace = true }
